swagger: agent, remove sync/copy
